--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "description": "Личный проект «Пинк» от HTML Academy",
   "devDependencies": {
-    "autoprefixer": "9.5.x",
-    "browser-sync": "2.26.x",
-    "gulp": "4.0.x",
-    "gulp-plumber": "1.2.x",
-    "gulp-sourcemaps": "2.6.x",
-    "gulp-postcss": "8.0.x",
-    "gulp-sass": "4.0.x",
     "@htmlacademy/editorconfig-cli": "1.x",
-    "stylelint": "10.1.x",
-    "stylelint-config-htmlacademy": "0.1.x"
+    "autoprefixer": "^9.5.1",
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "load-gulp-tasks": "^0.1.0",
+    "node-sass": "^4.13.1",
+    "stylelint": "^10.1.0",
+    "stylelint-config-htmlacademy": "^0.1.4"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
@@ -37,5 +39,8 @@
   ],
   "engines": {
     "node": "8.16"
+  },
+  "dependencies": {
+    "editorconfig": "^0.15.3"
   }
 }
